--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./styles/index.css">
     <script src="./src/index.js" defer></script>
+    <script src="./src/gametables.js" defer></script>
 </head>
 <body>
     <header>
