--- a/frontend/index.html
+++ b/frontend/index.html
@@ -43,11 +43,11 @@
             <!-- <label for="Player 1">Player 1</label> -->
             <div id='player-selects'>
                 <select name="Player 1" id="choose-player-1" placeholder="Player 1">
-                    <option value="" disabled selected>Select Player 1</option>
+                    <!-- <option value="" disabled selected>Select Player 1</option> -->
                 </select>
                 <button id="resets" type='reset'>⟲</button>
                 <select name="Player 2" id="choose-player-2">
-                    <option value="" disabled selected>Select Player 2</option>
+                    <!-- <option value="" disabled selected>Select Player 2</option> -->
                 </select>
             </div>
             <div id="div-start-button">
@@ -71,7 +71,7 @@
         <form id='new-player-form'>
             <input id="name" type='text' placeholder="Name">
             <input id="image" type='text' placeholder="Image URL">
-            <button type='submit'>Create Player</button>
+            <button id="submit-new-player-button" type='submit'>Create Player</button>
         </form>
     </nav>
     <footer id="history">
