--- a/frontend/index.html
+++ b/frontend/index.html
@@ -59,7 +59,9 @@
                     <option value="" disabled selected>Select Location</option>
                     <option value="Washington+Square,New+York,NY+10012">Washington Square Park</option>
                     <option value="Center+Drive,New+York,NY+10019">Central Park</option>
+                    <option value="219+Thompson+St,New+York,NY+10012">Village Chess Shop</option>
                     <option value="Bryant+Park,W+40th+St,New+York,NY+10018">Bryant Park</option>
+                    <option value="23+W+10th+St,New+York,NY+10011">Marshall Chess Club</option>
                 </select>
                 
                 <input id="bet-amount2" type='number' placeholder="Bet Amount">
