--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./styles/index.css">
+    <script src="./src/variables.js" defer></script>
     <script src="./src/index.js" defer></script>
     <script src="./src/gametables.js" defer></script>
     <script src="./src/user.js" defer></script>
